<resources>
    <string name="app_name">Moondial</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_acknowledgments">Acknowledgments</string>
    <string name="reset_current_phase">Press and hold to reset.</string>
    <string name="photo_acknowledgment">Full Moon at Kennedy Space Center\nby Kim Shiflett of NASA,\n9th August 2017.</string>

    <!-- Phase descriptions. -->
    <string name="new_moon">New\nMoon</string>
    <string name="day_old">Day\nOld</string>
    <string name="waxing_crescent_thin">Waxing\nCrescent</string>
    <string name="waxing_crescent">Waxing\nCrescent</string>
    <string name="waxing_crescent_thick">Waxing\nCrescent</string>
    <string name="first_quarter">First\nQuarter</string>
    <string name="waxing_gibbous_thin">Waxing\nGibbous</string>
    <string name="waxing_gibbous">Waxing\nGibbous</string>
    <string name="waxing_gibbous_thick">Waxing\nGibbous</string>
    <string name="full_moon">Full\nMoon</string>
    <string name="waning_gibbous_thick">Waning\nGibbous</string>
    <string name="waning_gibbous">Waning\nGibbous</string>
    <string name="waning_gibbous_thin">Waning\nGibbous</string>
    <string name="last_quarter">Last\nQuarter</string>
    <string name="waning_crescent_thick">Waning\nCrescent</string>
    <string name="waning_crescent">Waning\nCrescent</string>
    <string name="waning_crescent_thin">Waning\nCrescent</string>

    <!-- Main menu. -->
    <string name="action_settings">Settings</string>
    <string name="action_acknowledgments">Acknowledgments</string>

    <!-- Preferences -->

    <!-- Keys -->
    <string name="background_moon_key" translatable="false">background_moon</string>
    <string name="phase_description_key" translatable="false">phase_description</string>
    <string name="sky_key" translatable="false">sky</string>
    <string name="invert_key" translatable="false">invert</string>

    <!-- Headings -->
    <string name="appearance_header">Appearance</string>
    <string name="location_header">Location</string>

    <!-- Display Background Moon Preference. -->
    <string name="background_moon_title">Display Background Moon</string>

    <!-- Display Phase Description Preference. -->
    <string name="phase_description_title">Display Phase Description</string>

    <!-- Display Sky Preference. -->
    <string name="sky_title">Sky</string>
    <string name="sky_entry_day_light">Day, Light</string>
    <string name="sky_entry_day_dark">Day, Dark</string>
    <string name="sky_entry_twilight_light">Twilight, Light</string>
    <string name="sky_entry_twilight_dark">Twilight, Dark</string>
    <string name="sky_entry_night_light">Night, Light</string>
    <string name="sky_entry_night_dark">Night, Dark</string>
    <string name="sky_value_day_light">day_light</string>
    <string name="sky_value_day_dark">day_dark</string>
    <string name="sky_value_twilight_light">twilight_light</string>
    <string name="sky_value_twilight_dark">twilight_dark</string>
    <string name="sky_value_night_light">night_light</string>
    <string name="sky_value_night_dark">night_dark</string>
    <string name="sky_value_default">@string/sky_value_twilight_dark</string>

    <!-- Invert Preference. -->
    <string name="invert_title">Invert</string>
    <string name="invert_summary_on">Southern Hemisphere</string>
    <string name="invert_summary_off">Northern Hemisphere</string>

</resources>
