<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_header">

        <SwitchPreferenceCompat
            app:key="@string/phase_description_key"
            app:title="@string/phase_description_title"
            app:defaultValue="@bool/phase_description_default"/>

        <ListPreference
            app:key="@string/sky_key"
            app:title="@string/sky_title"
            app:defaultValue="@string/sky_value_default"
            app:entries="@array/sky_entries"
            app:entryValues="@array/sky_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location_header">

        <SwitchPreferenceCompat
            app:key="@string/invert_key"
            app:title="@string/invert_title"
            app:defaultValue="@bool/invert_default"
            app:summaryOn="@string/invert_summary_on"
            app:summaryOff="@string/invert_summary_off"/>

    </PreferenceCategory>

</PreferenceScreen>
